--- a/style.css
+++ b/style.css
@@ -1,91 +1,98 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
 body {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  color: #5a5a5a;
+	padding-top: 4rem;
+	padding-bottom: 3rem;
+	color: #5a5a5a;
 }
 
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
+.active {
+	border-bottom: 2px solid #204A87;
 }
-/* Since positioning the image, we need to help out the caption */
+
+.logo-title {
+	line-height: 40px;
+	padding: 0 5px;
+}
+
+.navbar-toggler {
+	border: none;
+}
+
+.navbar-brand {
+	padding: 0;
+}
+.navbar-nav .nav-link {
+	padding-top: 0;
+	padding-bottom: 0;
+	height: 50px;
+	line-height: 50px;
+}
+
+.carousel { margin-bottom: 4rem; }
 .carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
+	bottom: 3rem;
+	z-index: 10;
 }
 
-/* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
-  background-color: #777;
+	height: 32rem;
+	background-color: #777;
 }
+
 .carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-width: 100%;
+	height: 32rem;
 }
 
-
-/* MARKETING CONTENT
--------------------------------------------------- */
-
-/* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center;
+	margin-bottom: 1.5rem;
+	text-align: center;
 }
 .marketing h2 {
-  font-weight: 400;
+	font-weight: 400;
 }
 .marketing .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
+	margin-right: .75rem;
+	margin-left: .75rem;
 }
-
-
-/* Featurettes
-------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+	margin: 5rem 0;
 }
 
-/* Thin out the marketing headings */
 .featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -.05rem;
+	font-weight: 300;
+	line-height: 1;
+	letter-spacing: -.05rem;
 }
-
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
 
 @media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
+	.carousel-caption p {
+		margin-bottom: 1.25rem;
+		font-size: 1.25rem;
+		line-height: 1.4;
+	}
 
-  .featurette-heading {
-    font-size: 50px;
-  }
+	.featurette-heading {
+		font-size: 50px;
+	}
 }
 
 @media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem;
-  }
+	.featurette-heading {
+		margin-top: 7rem;
+	}
+}
+@media (max-width: 991.98px) {
+	.social-icons {
+		display: inline;
+	}
+	.social-icons li {
+		list-style: none;
+		display: inline-block;
+		width: 15%;
+		float: left;
+	}
 }
