--- a/style.css
+++ b/style.css
@@ -177,3 +177,12 @@ body {
 		right: -23%;
 	}
 }
+
+@media only screen
+	and (min-device-width: 320px)
+	and (max-device-width: 667px)
+	and (orientation: landscape) {
+	.carousel-item {
+		min-height: 110vh;
+	}
+}
