Fixed Navbar social buttons for Mobile

--- a/style.css
+++ b/style.css
@@ -170,7 +170,8 @@ body {
 	.social-icons li {
 		list-style: none;
 		display: inline-block;
-		width: 15%;
+		width: 20%;
+		text-align: center;
 		float: left;
 	}
 	.carousel-item > img {
