Added first 2018-19 session Event

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -60,6 +60,9 @@ body
 		p
 			margin-right: .75rem
 			margin-left: .75rem
+	.col-lg-8, .col-lg-5
+		p
+			text-align: justify
 
 .img-intro
 	margin-top: 8rem
