--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ body {
     min-width: 100%;
     height: auto; }
 
+.mx-auto{
+  width: 700px;
+  height: auto;
+}
+
 .marketing h2 {
   font-weight: 400; }
 .marketing .col-lg-4 {
@@ -68,9 +73,7 @@ body {
     margin-left: 0.75rem; }
 .marketing .col-lg-8 p, .marketing .col-lg-5 p {
   text-align: justify; }
-.poster{
-  padding-left: 80px;
-}
+
 
 .img-intro {
   margin-top: 8rem; }
@@ -90,6 +93,11 @@ body {
 
 background: rgb(217,224,201);
 background: linear-gradient(90deg, rgba(217,224,201,1) 0%, rgba(219,231,233,1) 62%);
+padding-top: 15px;
+padding-bottom: 15px;
+border-radius: 3px;
+margin-bottom: 15px;
+
  }
 
 .g-map iframe {
@@ -178,5 +186,8 @@ background: linear-gradient(90deg, rgba(217,224,201,1) 0%, rgba(219,231,233,1) 6
     min-height: 110vh; }
     .carousel-item > img {
       right: -10%; } }
-
+@media screen and (max-width:767px){
+  .fiximg{
+padding: 0;
+  }
 /*# sourceMappingURL=style.css.map */
