--- a/style.css
+++ b/style.css
@@ -190,4 +190,10 @@ margin-bottom: 15px;
   .fiximg{
 padding: 0;
   }
+
+@media (max-width:768px) {
+  .main-text{
+    font-size: 30px !important;
+  }
+}
 /*# sourceMappingURL=style.css.map */
